[gd_scene load_steps=4 format=3 uid="uid://h6whhnd58eu"]

[ext_resource type="Script" path="res://src/Actors/pause_menu.gd" id="1_ukm0g"]
[ext_resource type="Shader" path="res://shaders/pause_menu_blur.gdshader" id="2_0a1ry"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1ua8u"]
shader = ExtResource("2_0a1ry")
shader_parameter/amount = 0.5

[node name="PauseMenu" type="Control"]
z_index = 15
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ukm0g")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_1ua8u")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = 264.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 800.0
offset_top = 448.0
offset_right = -800.0
offset_bottom = -312.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="TitleScreen" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Title Screen"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TitleScreen" to="." method="_on_title_screen_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
